--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@google/genai": "^1.21.0",
     "react-dom": "^19.1.1",
-    "react": "^19.1.1"
+    "react": "^19.1.1",
+    "react-simple-code-editor": "^0.13.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
